/*
Copyright 2022 The KubeZoo Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kubewharf.kubezoo.pkg.apis.quota.v1alpha1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/kubewharf/kubezoo/pkg/apis/quota/v1alpha1";

// ClusterResourceQuota is the Schema for the clusterresourcequota API
message ClusterResourceQuota {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ClusterResourceQuotaSpec spec = 2;

  optional ClusterResourceQuotaStatus status = 3;
}

// ClusterResourceQuotaList contains a list of ClusterResourceQuota
message ClusterResourceQuotaList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ClusterResourceQuota items = 2;
}

// ClusterResourceQuotaSpec defines the desired state of ClusterResourceQuota
message ClusterResourceQuotaSpec {
  optional .k8s.io.api.core.v1.ResourceQuotaSpec resourceQuotaSpec = 1;

  // A label query over a set of resources, in this case namespaces.
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector namespaceSelector = 2;

  // namespaces specifies which namespaces the cluster resource quota applies to.
  // +optional
  repeated string namespaces = 3;
}

// ClusterResourceQuotaStatus defines the observed state of ClusterResourceQuota
message ClusterResourceQuotaStatus {
  optional .k8s.io.api.core.v1.ResourceQuotaStatus resourceQuotaStatus = 1;
}

